--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,33 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <% if flash.empty? %>
-      <% flash.each do |key, message| %>
-        <div class="<%= key %>_message">
-          <%= message %>
-        </div>
-      <% end %>
+
+    <% if success %>
+      <div class="success_message">
+        <%= success %>
+      </div>
     <% end %>
+
+    <% if notice %>
+      <div class="notice_message">
+        <%= notice %>
+      </div>
+    <% end %>
+
+    <% if error %>
+      <div class="error_message">
+        <%= error %>
+      </div>
+    <% end %>
+
+    <%= render "shared/navbar" %>
+    <%= render "shared/modal" %>
+
     <%= yield %>
   </body>
 </html>
