--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
       <%= link_to "Explore", "" %>
     </div>
     <div class="post_image">
-      <%= link_to "Post iamge", "" %>
+      <%= link_to "Post iamge", new_image_path, data: { bs_toggle: 'modal', bs_target: '#newImageModal', remote: :true } %>
     </div>
     <div class="actions">
       <%= link_to "#" do %>
