feat: Completed functionality to add tags to image.

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -15,5 +15,5 @@
  *= require_slef
  */
 
-//  @import 'bootstrap/scss/bootstrap';
- @import "bootstrap";
+@import "bootstrap";
+@import "slim-select/dist/slimselect.css";
