fix: Desgin for multi-select tags input solved.

--- a/app/views/images/new.js.erb
+++ b/app/views/images/new.js.erb
@@ -1,1 +1,3 @@
-$("#newImageForm").html("<%= j (render 'form', image: @image) %>");
+$(document).ready(function(){
+  $("#newImageForm").html("<%= j (render 'form', image: @image) %>");
+});
