--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -6,8 +6,8 @@
     <div class="new__image--input">
       <%= f.text_field :location, placeholder: "Location", id: "new__image--input" %>
     </div>
-    <div class="new__image--input">
-      <%= f.select :tag_ids, @tags.map {|t| [ t.tag_name, t.id ] }, {}, multiple: true, id: "selectElement" %>
+    <div class="new__image--input" id="tags_multi_select_container">
+      <%= f.select :tag_ids, @tags.map {|t| [ t.tag_name, t.id ] }, { include_blank: false, required: false }, multiple: true, id: "selectElement", class: "tags_multi_select form-select form-control", style: "width: 100%" %>
     </div>
   </div>
   <div class="modal-footer">
@@ -16,4 +16,15 @@
   </div>
 <% end %>
 
-<%= javascript_pack_tag "multiple_tags.js" %>
+<script>
+  $(document).ready(function() {
+    $('.tags_multi_select').select2({
+      theme: 'bootstrap',
+      placeholder: {
+        id: '-1',
+        text: "Add tags to your image",
+      },
+      dropdownParent: $('#tags_multi_select_container').parent()
+    });
+  });
+</script>
