--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,29 +11,30 @@
   </head>
 
   <body>
+    <main id="container">
+      <% if success %>
+        <div class="success_message">
+          <%= success %>
+        </div>
+      <% end %>
 
-    <% if success %>
-      <div class="success_message">
-        <%= success %>
-      </div>
-    <% end %>
+      <% if notice %>
+        <div class="notice_message">
+          <%= notice %>
+        </div>
+      <% end %>
 
-    <% if notice %>
-      <div class="notice_message">
-        <%= notice %>
-      </div>
-    <% end %>
+      <% if error %>
+        <div class="error_message">
+          <%= error %>
+        </div>
+      <% end %>
 
-    <% if error %>
-      <div class="error_message">
-        <%= error %>
-      </div>
-    <% end %>
+      <%= render "shared/navbar" %>
+      <%= render "shared/modal" %>
 
-    <%= render "shared/navbar" %>
-    <%= render "shared/modal" %>
-
-    <%= yield %>
+      <%= yield %>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   </body>
 </html>
