feat: Profile functionality completed.

--- a/app/views/shared/_image_card.html.erb
+++ b/app/views/shared/_image_card.html.erb
@@ -30,6 +30,8 @@
           </div>
         </div>
       <% end %>
+    <% else%>
+      <span>You haven't posted any images yet :(</span>
     <% end %>
   </div>
 </div>
