--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,10 +24,11 @@
       <%= link_to "#" do %>
         <i class="fa-solid fa-bell"></i>
       <% end %>
-      <div class="options">
+      <div class="options_menu">
         <%= link_to "" do %>
           <i class="fa-solid fa-circle-user"></i>
         <% end %>
+        <%= link_to "My profile", profile_path(@current_user.username) %>
         <%= link_to "logout", logout_path, method: :post %>
       </div>
     </div>
