--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,1 +1,5 @@
-<%= render "shared/image_card" %>
+<%= render "image_content_header" %>
+
+<div data-content-type="user-images" id="user-content">
+  <%= render "shared/image_card" %>
+</div>
