--- a/app/views/shared/_image_card.html.erb
+++ b/app/views/shared/_image_card.html.erb
@@ -31,7 +31,7 @@
         </div>
       <% end %>
     <% else%>
-      <span id="no-content"></span>
+      <span id="no-content">No content to show</span>
     <% end %>
   </div>
 </div>
