fix: Moved likes, downloads and boxes views to the respectives controllers.

--- a/app/views/boxes/show.html.erb
+++ b/app/views/boxes/show.html.erb
@@ -1,4 +1,4 @@
-<%= render "image_content_header" %>
+<%= render "shared/image_content_header" %>
 
 <div data-content-type="user-images" id="user-content">
   <div class="boxes-container">
