feat: Functionality to show form for new box and functionality to create a new box completed.

--- a/app/views/images/new.js.erb
+++ b/app/views/images/new.js.erb
@@ -1,3 +1,4 @@
 $(document).ready(function(){
-  $("#newImageForm").html("<%= j (render 'form', image: @image) %>");
+  $("#newFormModalLabel").html("Post a new image");
+  $("#newForm").html("<%= j (render 'form', image: @image) %>");
 });
