--- a/app/views/boxes/show.html.erb
+++ b/app/views/boxes/show.html.erb
@@ -21,6 +21,7 @@
         <% end %>
       <% else %>
         <span>You haven't created any boxes yet :(</span>
+        <%= link_to "Create a new box", new_box_path, data: { bs_toggle: 'modal', bs_target: '#newFormModal', remote: :true } %>
       <% end %>
     </div>
   </div>
