--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -1,11 +1,11 @@
-<div class="modal fade" id="newImageModal" aria-labelledby="newImageModalLabel" aria-hidden="true">
+<div class="modal fade" id="newFormModal" aria-labelledby="newFormModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="newImageModalLabel">Post new image</h1>
+        <h1 class="modal-title fs-5" id="newFormModalLabel"></h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div id="newImageForm"></div>
+      <div id="newForm"></div>
     </div>
   </div>
 </div>
