feat: Functionality to show boxes list in a modal completed.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
 
         <%= render "shared/navbar" %>
         <%= render "shared/modal" %>
+        <%= render "shared/add_to_box_modal" %>
       <% end %>
 
       <%= yield %>
