--- a/app/views/shared/_image_card.html.erb
+++ b/app/views/shared/_image_card.html.erb
@@ -14,6 +14,11 @@
                 <i class="fa-solid fa-download"></i>
               <% end %>
             </div>
+            <div class="add_to_box">
+              <%= link_to modal_boxes_path, method: :post, data: { image_id: img.identifier, bs_toggle: 'modal', bs_target: '#listBoxesModal' }, remote: true do%>
+                <i class="fa-solid fa-plus"></i>
+              <% end%>
+            </div>
           </div>
           <div class="image-body">
             <div class="thumb">
