--- a/app/views/boxes/modal_boxes.js.erb
+++ b/app/views/boxes/modal_boxes.js.erb
@@ -1,4 +1,4 @@
 $(document).ready(function(){
   $("#listBoxesModalLabel").html("Add to box");
-  $("#boxes_list").html("<%= j (render 'list_boxes') %>");
+  $("#boxes_list").html("<%= j (render 'list_boxes_modal') %>");
 });
