feat: Functionality to show images in box completed.

--- a/app/views/boxes/_list_boxes.html.erb
+++ b/app/views/boxes/_list_boxes.html.erb
@@ -7,6 +7,7 @@
             <div class="box-body">
               <div><%= bx.box_name %></div>
               <div><%= bx.description %></div>
+              <div><%= link_to "View", "/boxes/#{bx.identifier}/#{bx.box_name}" %></div>
             </div>
             <div class="box-footer">
               <div class="box_tags">
