--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
   </div>
   <div class="nav__item--end">
     <div class="explore">
-      <%= link_to "Explore", "" %>
+      <%= link_to "Explore", "/explore" %>
     </div>
     <div class="post_image">
       <%= link_to "Post iamge", new_image_path, data: { bs_toggle: 'modal', bs_target: '#newFormModal', remote: :true } %>
