--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -15,5 +15,8 @@
  *= require_slef
  */
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;500;600&display=swap');
 @import "bootstrap";
 @import "../select2/select2.min.css";
+@import "variables";
+@import "base"
