--- a/app/javascript/stylesheets/shared/_variables.scss
+++ b/app/javascript/stylesheets/shared/_variables.scss
@@ -8,9 +8,14 @@ $h6: 1rem;
 
 // ############################################# //
 
-// ------ Base colors ----- //
+// ------ Base background colors ----- //
 $bg-light: #fffffffa;
 $bg-dark: #323232;
+
+// ------ Base font colors ----- //
+$light: #f7f7f7fa;
+$dark: #2c2c2c;
+
 
 // ############################################# //
 
