--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -18,5 +18,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;500;600&display=swap');
 @import "bootstrap";
 @import "../select2/select2.min.css";
-@import "variables";
-@import "base"
+@import "mixins/_mixins";
+@import "shared/variables";
+@import "shared/base";
+@import "shared/navbar";
